--- a/clothing.html
+++ b/clothing.html
@@ -3,31 +3,31 @@
     <h1>Gear</h1>
     <div class="thumbnail">
       <%=image_tag "fishingpole.jpg", :width=>"80", :height=>"80", :id=>"picture" %><br>
-      Fishing Poles
+      Footwear
     </div>
 
     <div class="thumbnail">
       <%= image_tag "backpack.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
-      Backpacks
+      Pants
     </div>
 
     <div class="thumbnail">
       <%= image_tag "tent.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
-      Tents
+      Jackets
     </div>
 
     <div class="thumbnail">
       <%= image_tag "cook.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
-      Cooking Equipment
+      Shirts
     </div>
 
     <div class="thumbnail">
       <%= image_tag "food.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
-      Food
+      Shorts
     </div>
 
     <div class="thumbnail">
       <%= image_tag "headlamp.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"fishingpole" %><br>
-      Headlamps
+      Underwear
     </div> 
   </div>
