--- a/home.html
+++ b/home.html
@@ -2,10 +2,6 @@
 <html>
   <head>
     <title>Project1</title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
@@ -20,21 +16,13 @@
       </div>
 
       <div id="navbar">
-        <table>
-          <tr>
-            <td><a href="first.html.erb">Home</a></td>
-          </tr>
-          <tr>
-            <td><a href="second.html.erb">About Us</a></td>
-          </tr>
-          <tr>
-           <td><a href="third.html.erb">Gear</a></td>
-          </tr>
-          <tr>
-           <td><a href="fourth.html.erb">Clothing</a></td>
-          </tr>
-           <td><a href="fifth.html.erb">Customer Service</a></td>
-          </table>
+        <ul>
+            <li><a href="home.html">Home</a></li>
+            <li><a href=".html">About Us</a></li>
+            <li><a href="third.html.erb">Gear</a></li>
+            <li><a href="fourth.html.erb">Clothing</a></li>
+            <li><a href="fifth.html.erb">Customer Service</a></li>
+        </ul>
       </div>
     </div>
 
