--- a/aboutus.html
+++ b/aboutus.html
@@ -1,3 +1,3 @@
 <h1> About Us </h1>
-
-<p> 
+<p> RCP Outdoors is all about nature! We love all things wild: bunnies, rabbits, snakes, bears, pumas, cheetas, horses, wolves, dogs, cats, 
+etc. . . the list goes on forever. We are dedicate to bringing out customers the best quality gear for their nature excursions! </p> 
