--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Project1</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
@@ -18,16 +18,14 @@
       <div id="navbar">
         <ul>
             <li><a href="home.html">Home</a></li>
-            <li><a href=".html">About Us</a></li>
-            <li><a href="third.html.erb">Gear</a></li>
-            <li><a href="fourth.html.erb">Clothing</a></li>
-            <li><a href="fifth.html.erb">Customer Service</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="gear.html">Gear</a></li>
+            <li><a href="clothing.html">Clothing</a></li>
+            <li><a href="customerservice.html">Customer Service</a></li>
         </ul>
       </div>
     </div>
 
-    
-    <%= yield %>
       
       <div id="footer">
         This cite was designed by Rob, Creed and Peter.
