--- a/clothing.html
+++ b/clothing.html
@@ -1,33 +1,33 @@
 <div class=main>
   <div class = items>
-    <h1>Gear</h1>
+    <h1>Clothing</h1>
     <div class="thumbnail">
-      <%=image_tag "fishingpole.jpg", :width=>"80", :height=>"80", :id=>"picture" %><br>
-      Footwear
-    </div>
-
-    <div class="thumbnail">
-      <%= image_tag "backpack.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <%=image_tag "hikingpants.jpg", :width=>"80", :height=>"80", :id=>"picture" %><br>
       Pants
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "tent.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
-      Jackets
-    </div>
-
-    <div class="thumbnail">
-      <%= image_tag "cook.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
-      Shirts
-    </div>
-
-    <div class="thumbnail">
-      <%= image_tag "food.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <%= image_tag "hikingshorts.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
       Shorts
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "headlamp.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"fishingpole" %><br>
-      Underwear
+      <%= image_tag "Hikingshirt.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      Shirt
+    </div>
+
+    <div class="thumbnail">
+      <%= image_tag "hikingsocks.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      Socks
+    </div>
+
+    <div class="thumbnail">
+      <%= image_tag "hikinhboots.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      Boots
+    </div>
+
+    <div class="thumbnail">
+      <%= image_tag "hikinghat.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"fishingpole" %><br>
+      Hat
     </div> 
   </div>
