--- a/aboutus.html
+++ b/aboutus.html
@@ -5,17 +5,15 @@
   </head>
 
   <body>
+  <div id="citeborder"  
     <div = "main">
     <div>
-      <div class="header">
         <div id="banner">
           <div id="logo">
             <img src="http://rlv.zcache.com/kiwi_new_zealand_emblem_round_sticker-r12b5f18476154510b5c44ff86c3110e5_v9wth_8byvr_512.jpg" width="75" height="75">
-          </div><h1> RCP Outdoor Supplies </h1>
+          </div>
+          <h1> RCP Outdoor Supplies </h1>
         </div>
-      </div>
-
-      <div id="navbar">
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="aboutus.html">About Us</a></li>
@@ -23,10 +21,10 @@
             <li><a href="clothing.html">Clothing</a></li>
             <li><a href="customerservice.html">Customer Service</a></li>
         </ul>
-      </div>
     </div>
 
       <!--THIS IS WHERE CONTENT STARTS-->
+      
       
     <h1> About Us </h1>
       <p> RCP Outdoors is all about nature! We love all things wild: bunnies, rabbits, snakes, bears, pumas, cheetas, horses, wolves, dogs, cats, 
@@ -37,5 +35,6 @@
       <div id="footer">
         This cite was designed by Rob, Creed and Peter.
       </div>
+  </div>    
   </body>
 </html>
