--- a/customerservice.html
+++ b/customerservice.html
@@ -27,15 +27,15 @@
       
       <form action="/action_page.php">
         <fieldset>
-          <legend>Personal information:</legend>
+          <legend>We Want To Hear From You!:</legend>
           Name:<br>
-          <input type="text" name="name" value="Mickey">
+          <input type="text" name="name" value="">
           <br>
           Email:<br>
-          <input type="text" name="email" value="Mouse">
+          <input type="text" name="email" value="">
           <br>
           Message:<br>
-          <input type="text" name="message" value="Mickey">
+          <input type="text" name="message" value="">
           <br><br>
           <input type="submit" value="Submit">
          </fieldset>
