--- a/customerservice.html
+++ b/customerservice.html
@@ -36,7 +36,7 @@
           <input type="text1" name="email" value="">
           <br>
           Message:<br>
-          <input type="text" name="message" value="">
+          <textarea name = "message" rows="10" cols="10"></textarea>
           <br><br>
           <input type="submit" value="Submit">
          </fieldset>
