--- a/customerservice.html
+++ b/customerservice.html
@@ -26,7 +26,7 @@
       <!--THIS IS WHERE CONTENT STARTS-->
       
       <div class = "form">
-      <form action="/action_page.php">
+      <form action="thankyou.html">
         <fieldset>
           <legend>We Want To Hear From You!</legend>
           Name:<br>
