--- a/gear.html
+++ b/gear.html
@@ -29,17 +29,17 @@
   <div class = items>
     <h1>Gear</h1>
     <div class="thumbnail">
-      <%=image_tag "fishingpole.jpg", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <%=image_tag/pics "fishingpole.jpg", :width=>"80", :height=>"80", :id=>"picture" %><br>
       Fishing Poles
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "backpack.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <%= image_tag/pics "backpack.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
       Backpacks
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "tent.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <%= image_tag/pics "tent.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
       Tents
     </div>
 
