--- a/gear.html
+++ b/gear.html
@@ -29,32 +29,32 @@
   <div class = items>
     <h1>Gear</h1>
     <div class="thumbnail">
-      <%=image_tag/pics "fishingpole.jpg", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <img src="pics/fishingpole.jpg" width="80" height="80"><br>
       Fishing Poles
     </div>
 
     <div class="thumbnail">
-      <%= image_tag/pics "backpack.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <img src="pics/backpack.jpg" width="80" height="80"><br><br>
       Backpacks
     </div>
 
     <div class="thumbnail">
-      <%= image_tag/pics "tent.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <img src="pics/tent.jpg" width="80" height="80"><br><br>
       Tents
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "cook.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <img src="pics/cook.jpg" width="80" height="80"><br><br>
       Cooking Equipment
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "food.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <img src="pics/food.jpg" width="80" height="80"><br><br>
       Food
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "headlamp.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"fishingpole" %><br>
+      <img src="pics/headlamp.jpg" width="80" height="80"><br><br>
       Headlamps
     </div> 
   </div>
@@ -67,5 +67,4 @@
   </div>    
   </body>
 </html>
-  
   
