--- a/clothing.html
+++ b/clothing.html
@@ -28,32 +28,32 @@
   <div class = items>
     <h1>Clothing</h1>
     <div class="thumbnail">
-      <%=image_tag "hikingpants.jpg", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <img src="pics/hikingpants.jpg" width="80" height="80"><br>
       Pants
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "hikingshorts.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <img src="pics/hikingshorts.jpg" width="80" height="80"><br>
       Shorts
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "Hikingshirt.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <img src="pics/hikingshirt.jpg" width="80" height="80"><br>
       Shirt
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "hikingsocks.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <img src="pics/hikingsocks.jpg" width="80" height="80"><br>
       Socks
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "hikinhboots.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"picture" %><br>
+      <img src="pics/hikingboots.jpg" width="80" height="80"><br>
       Boots
     </div>
 
     <div class="thumbnail">
-      <%= image_tag "hikinghat.jpg", :alt=>"", :width=>"80", :height=>"80", :id=>"fishingpole" %><br>
+      <img src="pics/hikinghat.jpg" width="80" height="80"><br>
       Hat
     </div> 
   </div>
