--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             <li><a href="customerservice.html">Customer Service</a></li>
         </ul>
     </div>
-
+ <img src="pics/NZmtcook2.jpg" width="80" height="80">
       <!--THIS IS WHERE CONTENT STARTS-->
       
       <p style:text-align="center">Welcome to RCP Outdoors - where your smile is our promise!</p>
