--- a/clothing.html
+++ b/clothing.html
@@ -5,8 +5,8 @@
   </head>
 
   <body>
-  <div id="citeborder"  
-    <div = "main">
+  <div id="citeborder">  
+    <div id= "main">
     <div>
         <div id="banner">
           <div id="logo">
