--- a/home.html
+++ b/home.html
@@ -22,11 +22,12 @@
             <li><a href="customerservice.html">Customer Service</a></li>
         </ul>
     </div>
- <img src="pics/NZmtcook2.jpg" width="80" height="80">
+ 
       <!--THIS IS WHERE CONTENT STARTS-->
       
       <p style:text-align="center">Welcome to RCP Outdoors - where your smile is our promise!</p>
     <br>
+      <img src="pics/NZmtcook2.jpg" width="100%" height="1200">
     <p style:text-align="center">We have all your outdoor needs!</p>
       
       <!--THIS IS WHERE CONTENT ENDS-->
